new stuff/chatParser.js
// Generated from chat.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import chatListener from './chatListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class chatParser extends antlr4.Parser {

    static grammarFileName = "chat.g4";
    static literalNames = [ null, "':'", "'-'", "')'", "'('", "'/'", "'@'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "SAYS", 
                             "SHOUTS", "WORD", "WHITESPACE", "NEWLINE", 
                             "TEXT" ];
    static ruleNames = [ "chat", "line", "message", "name", "command", "emoticon", 
                         "link", "color", "mention" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = chatParser.ruleNames;
        this.literalNames = chatParser.literalNames;
        this.symbolicNames = chatParser.symbolicNames;
    }



	chat() {
	    let localctx = new ChatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, chatParser.RULE_chat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 19; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 18;
	            this.line();
	            this.state = 21; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===9);
	        this.state = 23;
	        this.match(chatParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, chatParser.RULE_line);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 25;
	        this.name();
	        this.state = 26;
	        this.command();
	        this.state = 27;
	        this.match(chatParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	message() {
	    let localctx = new MessageContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, chatParser.RULE_message);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 35;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 29;
	            this.emoticon();
	            break;
	        case 12:
	            this.state = 30;
	            this.link();
	            break;
	        case 5:
	            this.state = 31;
	            this.color();
	            break;
	        case 6:
	            this.state = 32;
	            this.mention();
	            break;
	        case 9:
	            this.state = 33;
	            this.match(chatParser.WORD);
	            break;
	        case 10:
	            this.state = 34;
	            this.match(chatParser.WHITESPACE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	name() {
	    let localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, chatParser.RULE_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this.match(chatParser.WORD);
	        this.state = 38;
	        this.match(chatParser.WHITESPACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, chatParser.RULE_command);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 7:
	            this.state = 40;
	            this.match(chatParser.SAYS);
	            break;
	        case 8:
	            this.state = 41;
	            this.match(chatParser.SHOUTS);
	            this.state = 42;
	            this.match(chatParser.T__0);
	            this.state = 43;
	            this.match(chatParser.WHITESPACE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	emoticon() {
	    let localctx = new EmoticonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, chatParser.RULE_emoticon);
	    var _la = 0;
	    try {
	        this.state = 56;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 46;
	            this.match(chatParser.T__0);
	            this.state = 48;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 47;
	                this.match(chatParser.T__1);
	            }

	            this.state = 50;
	            this.match(chatParser.T__2);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 51;
	            this.match(chatParser.T__0);
	            this.state = 53;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 52;
	                this.match(chatParser.T__1);
	            }

	            this.state = 55;
	            this.match(chatParser.T__3);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	link() {
	    let localctx = new LinkContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, chatParser.RULE_link);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.match(chatParser.TEXT);
	        this.state = 59;
	        this.match(chatParser.TEXT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	color() {
	    let localctx = new ColorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, chatParser.RULE_color);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        this.match(chatParser.T__4);
	        this.state = 62;
	        this.match(chatParser.WORD);
	        this.state = 63;
	        this.match(chatParser.T__4);
	        this.state = 64;
	        this.message();
	        this.state = 65;
	        this.match(chatParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mention() {
	    let localctx = new MentionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, chatParser.RULE_mention);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(chatParser.T__5);
	        this.state = 68;
	        this.match(chatParser.WORD);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

chatParser.EOF = antlr4.Token.EOF;
chatParser.T__0 = 1;
chatParser.T__1 = 2;
chatParser.T__2 = 3;
chatParser.T__3 = 4;
chatParser.T__4 = 5;
chatParser.T__5 = 6;
chatParser.SAYS = 7;
chatParser.SHOUTS = 8;
chatParser.WORD = 9;
chatParser.WHITESPACE = 10;
chatParser.NEWLINE = 11;
chatParser.TEXT = 12;

chatParser.RULE_chat = 0;
chatParser.RULE_line = 1;
chatParser.RULE_message = 2;
chatParser.RULE_name = 3;
chatParser.RULE_command = 4;
chatParser.RULE_emoticon = 5;
chatParser.RULE_link = 6;
chatParser.RULE_color = 7;
chatParser.RULE_mention = 8;

class ChatContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_chat;
    }

	EOF() {
	    return this.getToken(chatParser.EOF, 0);
	};

	line = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LineContext);
	    } else {
	        return this.getTypedRuleContext(LineContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterChat(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitChat(this);
		}
	}


}



class LineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_line;
    }

	name() {
	    return this.getTypedRuleContext(NameContext,0);
	};

	command() {
	    return this.getTypedRuleContext(CommandContext,0);
	};

	NEWLINE() {
	    return this.getToken(chatParser.NEWLINE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterLine(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitLine(this);
		}
	}


}



class MessageContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_message;
    }

	emoticon() {
	    return this.getTypedRuleContext(EmoticonContext,0);
	};

	link() {
	    return this.getTypedRuleContext(LinkContext,0);
	};

	color() {
	    return this.getTypedRuleContext(ColorContext,0);
	};

	mention() {
	    return this.getTypedRuleContext(MentionContext,0);
	};

	WORD() {
	    return this.getToken(chatParser.WORD, 0);
	};

	WHITESPACE() {
	    return this.getToken(chatParser.WHITESPACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterMessage(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitMessage(this);
		}
	}


}



class NameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_name;
    }

	WORD() {
	    return this.getToken(chatParser.WORD, 0);
	};

	WHITESPACE() {
	    return this.getToken(chatParser.WHITESPACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitName(this);
		}
	}


}



class CommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_command;
    }

	SAYS() {
	    return this.getToken(chatParser.SAYS, 0);
	};

	SHOUTS() {
	    return this.getToken(chatParser.SHOUTS, 0);
	};

	WHITESPACE() {
	    return this.getToken(chatParser.WHITESPACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitCommand(this);
		}
	}


}



class EmoticonContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_emoticon;
    }


	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterEmoticon(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitEmoticon(this);
		}
	}


}



class LinkContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_link;
    }

	TEXT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(chatParser.TEXT);
	    } else {
	        return this.getToken(chatParser.TEXT, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterLink(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitLink(this);
		}
	}


}



class ColorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_color;
    }

	WORD() {
	    return this.getToken(chatParser.WORD, 0);
	};

	message() {
	    return this.getTypedRuleContext(MessageContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterColor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitColor(this);
		}
	}


}



class MentionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = chatParser.RULE_mention;
    }

	WORD() {
	    return this.getToken(chatParser.WORD, 0);
	};

	enterRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.enterMention(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof chatListener ) {
	        listener.exitMention(this);
		}
	}


}




chatParser.ChatContext = ChatContext; 
chatParser.LineContext = LineContext; 
chatParser.MessageContext = MessageContext; 
chatParser.NameContext = NameContext; 
chatParser.CommandContext = CommandContext; 
chatParser.EmoticonContext = EmoticonContext; 
chatParser.LinkContext = LinkContext; 
chatParser.ColorContext = ColorContext; 
chatParser.MentionContext = MentionContext; 
